tests/baselines/reference/overloadResolutionOverCTLambda.errors.txt
tests/cases/compiler/overloadResolutionOverCTLambda.ts(2,5): error TS2345: Argument of type '(a: 数字) => 数字' is not assignable to parameter of type '(item: 数字) => 真假'.
  Type '数字' is not assignable to type '真假'.


==== tests/cases/compiler/overloadResolutionOverCTLambda.ts (1 errors) ====
    function foo(b: (item: number) => boolean) { }
    foo(a => a); // can not convert (number)=>bool to (number)=>number
        ~~~~~~
!!! error TS2345: Argument of type '(a: 数字) => 数字' is not assignable to parameter of type '(item: 数字) => 真假'.
!!! error TS2345:   Type '数字' is not assignable to type '真假'.